--- a/Mission06_Harris/Mission06_Harris.csproj
+++ b/Mission06_Harris/Mission06_Harris.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\Index1.cshtml" />
     <Content Remove="Views\Home\Privacy.cshtml" />
     <Content Remove="Views\Shared\Error.cshtml" />
   </ItemGroup>
